--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ru.zinal.idrcdc</groupId>
     <artifactId>autosub</artifactId>
-    <version>1.1.0</version>
+    <version>1.2-SNAPSHOT</version>
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
