--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,19 @@
             <artifactId>org.eclipse.equinox.common</artifactId>
             <version>3.6.100.v20120522-1841</version>
         </dependency>
+        <!-- test infrastructure -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
