--- a/pom.xml
+++ b/pom.xml
@@ -3,89 +3,102 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ru.zinal.idrcdc</groupId>
     <artifactId>autosub</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <iidr.libs.version>11.4.0.2.10686</iidr.libs.version>
+        <iidr.libs.version>11.4.0.3.11041</iidr.libs.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.14.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>2.14.0</version>
+        </dependency>
         <dependency>
             <groupId>org.jdom</groupId>
             <artifactId>jdom2</artifactId>
             <version>2.0.6</version>
         </dependency>
-        <dependency>
-            <groupId>com.ibm.iidr</groupId>
-            <artifactId>api</artifactId>
-            <version>${iidr.libs.version}</version>
-        </dependency>
+        <!-- IBM CDC CHCCLP API library -->
         <dependency>
             <groupId>com.ibm.iidr</groupId>
             <artifactId>chcclp</artifactId>
             <version>${iidr.libs.version}</version>
         </dependency>
+        <!-- IBM CDC CHCCLP runtime dependencies -->
+        <dependency>
+            <groupId>com.ibm.iidr</groupId>
+            <artifactId>api</artifactId>
+            <version>${iidr.libs.version}</version>
+            <scope>runtime</scope>
+        </dependency>
         <dependency>
             <groupId>com.ibm.iidr</groupId>
             <artifactId>comms</artifactId>
             <version>${iidr.libs.version}</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>com.ibm.iidr</groupId>
             <artifactId>messaging</artifactId>
             <version>${iidr.libs.version}</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>com.ibm.iidr</groupId>
             <artifactId>online</artifactId>
             <version>${iidr.libs.version}</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>com.ibm.iidr</groupId>
             <artifactId>resources</artifactId>
             <version>${iidr.libs.version}</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>com.ibm.iidr</groupId>
             <artifactId>server</artifactId>
             <version>${iidr.libs.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.13.3</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.13.3</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.eclipse.birt.runtime</groupId>
             <artifactId>org.eclipse.osgi</artifactId>
             <version>3.8.2.v20130124-134944</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.eclipse.birt.runtime</groupId>
             <artifactId>com.ibm.icu</artifactId>
             <version>4.4.2.v20110823</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.eclipse.birt.runtime</groupId>
             <artifactId>org.eclipse.core.jobs</artifactId>
             <version>3.5.300.v20120912-155018</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.eclipse.birt.runtime</groupId>
             <artifactId>org.eclipse.core.runtime</artifactId>
             <version>3.8.0.v20120912-155025</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.eclipse.birt.runtime</groupId>
             <artifactId>org.eclipse.equinox.common</artifactId>
             <version>3.6.100.v20120522-1841</version>
+            <scope>runtime</scope>
         </dependency>
         <!-- test infrastructure -->
         <dependency>
@@ -97,7 +110,7 @@
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-core</artifactId>
-            <version>1.3</version>
+            <version>2.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -106,7 +119,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.1.1</version>
+                <version>3.1.2</version>
                 <executions>
                     <execution>
                         <id>copy-dependencies</id>
@@ -119,9 +132,28 @@
                             <overWriteReleases>false</overWriteReleases>
                             <overWriteSnapshots>true</overWriteSnapshots>
                             <overWriteIfNewer>true</overWriteIfNewer>
+                            <!-- Runtime dependencies should be taken from the
+                                 Access Server installation -->
+                            <includeScope>compile</includeScope>
+                            <excludeGroupIds>com.ibm.iidr</excludeGroupIds>
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.2.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.2.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.2</version>
             </plugin>
         </plugins>
     </build>
