--- a/run/cdc-autosub.properties
+++ b/run/cdc-autosub.properties
@@ -1,22 +1,18 @@
 # Sample configuration of autosub
 
-as.host = 172.17.207.130
+as.host = zodak
 as.port = 10101
-as.user = autosub
-as.password = P@$$w0rd
-# Directory with configuration files for each monitored subscription
-subs.dir = subs
+as.user = automon
+as.password = P@ssw0rd
+# Directory with configuration files for subscriptions and agents
+subs.config = subs
+# File with the combined and validated configuration data
+subs.work = subs-work.xml
 # Delay between check iterations, milliseconds
-tool.sleep = 5000
-# Delay after detecting a DDL on a subscription before attempting recovery
+tool.sleep = 10000
+# Additional delay for recovery attempts after recovery failure, milliseconds
 tool.pause_after_error = 30000
-# Delay after stop request subscriptions before further operations
-tool.pause_after_stop = 5000
-# Wait for start mirroring (seconds!)
+# Wait for start mirroring, seconds
 tool.wait_start_mirroring = 20
-# Should we try to clear the staging store
-tool.staging_clear.enable = true
-# Which is the tool to clear the staging store
-tool.staging_clear.command = ./clear-staging-store.sh
 
 # End Of File
