--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -15,6 +15,14 @@ appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
-rootLogger.level = info
+rootLogger.level = INFO
 rootLogger.appenderRefs = stdout
 rootLogger.appenderRef.stdout.ref = STDOUT
+
+log4j.logger.com.ibm.idrcdc.autosub.RemoteTool = DEBUG
+log4j.logger.com.ibm.idrcdc.autosub.Repairman = INFO
+log4j.logger.com.ibm.idrcdc.autosub.ConfigValidator = INFO
+log4j.logger.com.ibm.idrcdc.autosub.Monitor = INFO
+log4j.logger.com.ibm.idrcdc.autosub.PendingChecker = INFO
+log4j.logger.com.ibm.idrcdc.autosub.Script = INFO
+log4j.logger.com.ibm.idrcdc.autosub.Worker = INFO
