moved dependency checks to earlier steps (outside of the Repairman algorithm)

--- a/run/cdc-autosub.properties
+++ b/run/cdc-autosub.properties
@@ -8,11 +8,13 @@ as.password = P@ssw0rd
 subs.config = subs
 # File with the combined and validated configuration data
 subs.work = subs-work.xml
-# Delay between check iterations, milliseconds
-tool.sleep = 10000
-# Additional delay for recovery attempts after recovery failure, milliseconds
-tool.pause_after_error = 30000
+# Check period, milliseconds
+tool.period = 10000
 # Wait for start mirroring, seconds
 tool.wait_start_mirroring = 20
+# Additional delay for recovery attempts after recovery failure, milliseconds
+tool.pause_after_error = 60000
+# Delay before any recovery actions when failure is detected, milliseconds
+tool.pause_before_repair = 10000
 
 # End Of File
