--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
           <version>2.15.0</version>
         </dependency>
         <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-core</artifactId>
+          <version>2.15.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-text</artifactId>
             <version>1.9</version>
